0026647: BRepTools::UVBounds() computes zero range by V

Calculation of bounding box on conic 2d curves corrected to work properly if specified parametric range is in negative values.

Test case added